# streamlit-webrtc-yolov5

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
