[tool.poetry]
name = "streamlit-webrtc-torch"
version = "0.1.0"
description = ""
authors = ["Violet Vivirand <purpleslovemail@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
streamlit = "^0.82.0"
opencv-python = "^4.5.2"
streamlit-webrtc = "^0.20.1"
torch = "^1.8.1"
torchvision = "^0.9.1"
numpy = "^1.20.3"
pandas = "^1.2.4"
pyarrow = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
